# Copyright 2018 The Batfish Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pybatfish"
version = "0.36.0"
description = "Python API and utilities for Batfish"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache License 2.0"}
authors = [
    {name = "The Batfish Open Source Project", email = "pybatfish-dev@intentionet.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["network", "configuration", "verification"]
dependencies = [
    "attrs>=18.1.0",
    "deepdiff",
    "pandas",
    "python-dateutil",
    "PyYAML",
    "requests",
    "requests-toolbelt",
    "setuptools",
    "simplejson",
    "urllib3>=1.26.0",
]

[project.urls]
Homepage = "https://github.com/batfish/pybatfish"
Documentation = "https://pybatfish.readthedocs.io/en/latest/"
Repository = "https://github.com/batfish/pybatfish"

[project.optional-dependencies]
capirca = [
    "capirca",
    "absl-py>=0.8.0",
]
dev = [
    "black<23.11",
    "cerberus",
    "check-manifest",
    "coverage",
    "inflection",
    "jupyter",
    "mypy",
    "nbconvert",
    "nbsphinx",
    "progressbar2",
    "pytest>=4.2.0",
    "pytest-cov",
    "pytz",
    "recommonmark",
    "requests_mock",
    "responses",
    "sphinx>=1.8.0",
    "sphinx-notfound-page",
    "sphinx_rtd_theme",
    "types-decorator",
    "types-python-dateutil",
    "types-pytz",
    "types-PyYAML",
    "types-requests",
    "types-setuptools",
    "types-simplejson",
    "capirca",
    "absl-py>=0.8.0",
]

[project.entry-points."batfish_session"]
bf = "pybatfish.client.session:Session"

[tool.setuptools]
packages = {find = {exclude = ["contrib", "docs", "tests"]}}
package-data = {"pybatfish" = ["py.typed"]}
zip-safe = false

[tool.pytest]
testpaths = ["tests"]
addopts = "--ignore tests/integration --cov=pybatfish"
doctest_encoding = "utf8"
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ALLOW_UNICODE", "ALLOW_BYTES"]
log_level = "INFO"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ignore tests/integration --cov=pybatfish"
doctest_encoding = "utf8"
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ALLOW_UNICODE", "ALLOW_BYTES"]
log_level = "INFO"

[tool.build_sphinx]
source-dir = "docs/source"
all-files = true
build-dir = "docs/build"
warning-is-error = 1
